--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "~14.1.3",
     "@angular/platform-browser-dynamic": "~14.1.3",
     "@angular/router": "~14.1.3",
-    "@ngrx/store": "^13.1.0",
-    "@ngrx/store-devtools": "^13.1.0",
+    "@ngrx/store": "^14.2.0",
+    "@ngrx/store-devtools": "^14.2.0",
+    "json-server": "^0.17.0",
+    "json-server-reset": "^1.3.3",
     "rxjs": "~7.5.5",
     "todomvc-app-css": "~2.4.2",
     "uuid": "~8.3.2",
