--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test:unit": "ng test --no-watch",
     "test:e2e": "start-server-and-test start http-get://localhost:9100 e2e",
     "lint": "ng lint",
-    "e2e": "cypress run --config-file cypress.json"
+    "e2e": "cypress open",
+    "api:start": "json-server --static . --watch data.json --middlewares ./node_modules/json-server-reset",
+    "api:reset": "node reset-db.js",
+    "start:all": "run-p start api:start",
+    "dev": "start-test start:all 9100 e2e"
   },
   "dependencies": {
     "@angular/animations": "^14.1.0-next",
@@ -55,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.7.0",
