--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,17 @@ jobs:
         uses: actions/checkout@v3
 
       # https://github.com/cypress-io/github-action
-      - name: Test answers 🤔
+      - name: Test component tests 🧩
         uses: cypress-io/github-action@v4
         with:
+          component: true
+
+      # https://github.com/cypress-io/github-action
+      - name: Test E2E answers 🤔
+        uses: cypress-io/github-action@v4
+        with:
+          # Cypress dependencies were installed in the previous test step
+          install: false
           start: 'npm run start:all'
           wait-on: 'http://localhost:9100'
           # run every answer spec file, ignore the placeholder files
