--- a/package.json
+++ b/package.json
@@ -48,15 +48,16 @@
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "cypress": "^10.6.0",
+    "cypress-real-events": "^1.7.1",
     "eslint": "^8.12.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "highlight.js": "11.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
+    "reveal.js": "4.3.1",
     "start-server-and-test": "^1.14.0",
     "ts-node": "^10.7.0",
     "typescript": "~4.6.3",
-    "vite": "3.0.9",
-    "reveal.js": "4.3.1",
-    "highlight.js": "11.6.0"
+    "vite": "3.0.9"
   }
 }
