--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "api:reset": "node reset-db.js",
     "start:all": "run-p start api:start",
     "dev": "start-test start:all 9100 e2e",
+    "test": "start-test start:all 9100 cy:run",
+    "cy:run": "cypress run",
     "slides": "vite --strictPort --port 3100",
     "slides:build": "vite build"
   },
