--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
 
       # https://github.com/cypress-io/github-action
-      - name: Test component tests 🧩
+      - name: Test components 🧩
         uses: cypress-io/github-action@v4
         with:
           component: true
