--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/uuid": "~8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
+    "cy-spok": "^1.5.2",
     "cypress": "^10.6.0",
     "cypress-real-events": "^1.7.1",
     "eslint": "^8.12.0",
