--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "5.20.0",
     "cy-spok": "^1.5.2",
     "cypress": "^10.6.0",
+    "cypress-if": "^1.4.4",
     "cypress-real-events": "^1.7.1",
     "eslint": "^8.12.0",
     "eslint-plugin-prettier": "^4.0.0",
